--- a/src/components/CardGame/style.css
+++ b/src/components/CardGame/style.css
@@ -1,9 +1,11 @@
 .card-game {
+  box-sizing: border-box;
   display: flex;
-  width: 130px;
-  height: 160px;
+
   justify-content: center;
   align-items: center;
+  width: var(--width);
+  height: var(--height);
   background: var(--color-alura);
   border: 4px solid var(--color-floral-white);
 }
