--- a/src/components/CardFrontBack/style.css
+++ b/src/components/CardFrontBack/style.css
@@ -7,6 +7,7 @@
   position: relative;
   transform-style: preserve-3d;
   transition: transform 600ms cubic-bezier(0.42, 0, 0.53, 1.72);
+  cursor: pointer;
 }
 
 .card-front-back.-active {
