--- a/src/objects/ScoreBoard/style.css
+++ b/src/objects/ScoreBoard/style.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   /* margin: 20px 0 20px; */
+  align-items: center;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
